// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Media Asset Page AV player should render version (live audio stream) 1`] = `
<DocumentFragment>
  .c1 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c7 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #ECEAE7;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 30%;
  padding-bottom: 56.25%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

.c4 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

.c11 {
  grid-column: 1 / span 6;
}

.c21 {
  display: grid;
  grid-column-gap: 1rem;
}

.c9 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

.c15 {
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  font-family: inherit;
  font-weight: inherit;
}

.c13 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  padding-bottom: 0.25rem;
}

.c13:last-child {
  padding-bottom: 1rem;
}

.c14 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c16 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c16:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.c16:focus,
.c16:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

.c18 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  margin-top: 0;
  list-style-type: none;
}

.c18 > li {
  position: relative;
}

.c18 > li::before {
  top: 0.5rem;
  content: ' ';
  position: absolute;
  border-width: 1rem;
  border: 0.1875rem solid #3F3F42;
  border-radius: 50%;
  left: -1rem;
}

.c19 {
  margin-bottom: 1rem;
}

.c17 {
  margin-bottom: 1.5rem;
}

.c3 {
  margin: 0;
  padding-bottom: 1.5rem;
  width: 100%;
}

.c24 {
  font-size: 0.75rem;
  line-height: 1rem;
  background-color: rgba(34,34,34,0.75);
  text-transform: uppercase;
  color: #FFFFFF;
  padding: 0.25rem 0.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  position: absolute;
  bottom: 0;
  margin: 0;
  left: 0;
}

.c23 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #ECEAE7;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 30%;
  padding-bottom: 56.25%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

.c2 {
  margin-top: 0.5rem;
}

.c2 figure {
  padding-bottom: 0;
}

.c10 {
  padding: 0.5rem 0 2rem;
}

.c0 {
  margin: 0 auto;
  padding-bottom: 2rem;
  width: 100%;
  padding-bottom: 1.5rem;
}

.c12 {
  padding-bottom: 1rem;
}

.c6 {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
}

.c5 {
  z-index: 1;
  border: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

@media (min-width:63rem) {
  .c4 {
    margin-bottom: 1.5rem;
  }
}

@media (max-width:25rem) {
  .c11 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c11 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c11 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c11 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c11 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c11 {
    max-width: initial;
  }
}

@media (max-width:63rem) {
  .c8 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c8 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .c8 {
    grid-column: 6 / span 12;
  }
}

@media (max-width:25rem) {
  .c8 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c8 {
    padding: 0 1rem;
  }
}

@media (max-width:63rem) {
  .c20 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c20 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .c20 {
    grid-column: 6 / span 12;
  }
}

@media (max-width:37.4375rem) {
  .c22 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c22 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c22 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:80rem) {
  .c22 {
    grid-column: 1 / span 12;
  }
}

@media (max-width:37.4375rem) {
  .c25 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c25 {
    grid-column: 1 / span 5;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c25 {
    grid-column: 1 / span 5;
  }
}

@media (min-width:80rem) {
  .c25 {
    grid-column: 1 / span 10;
  }
}

@media (max-width:79.9375rem) {
  .c21 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:80rem) {
  .c21 {
    grid-template-columns: repeat(12,1fr);
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c9 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c9 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c9 {
    padding: 2.5rem 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c13 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c13 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c14 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c14 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c18 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c18 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (max-width:63rem) {
  .c2 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .c2 {
    grid-column: 6 / span 12;
  }
}

@media (min-width:25rem) {
  .c2 {
    margin-top: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .c2 {
    padding: 0.5rem 0 0;
    margin-top: 2rem;
  }
}

@media (min-width:63rem) {
  .c10 {
    padding: 1rem 0 2.5rem;
  }
}

@media (max-width:37.4375rem) {
  .c0 {
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    grid-column-gap: 1rem;
  }
}

@media (max-width:62.9375rem) {
  .c0 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c0 {
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
    max-width: 45.5rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(20,minmax(0,2.95rem)) 1fr;
    max-width: 46.4rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    max-width: initial;
    margin: initial;
  }
}

@media (min-width:63rem) {
  .c0 {
    padding-bottom: 2rem;
  }
}

@media (min-width:63rem) {
  .c12 {
    padding-bottom: 1.5rem;
  }
}

<div
    id="ContextsContainer"
  >
    <div
      id="PageWrapperContainer"
    >
      <div
        id="LoadingContainer"
      >
        <div
          id="ErrorContainer"
        >
          <div
            id="DataContainer"
          >
            <div>
              chartbeat
            </div>
            <div>
              comscore
            </div>
            <noscript />
            <main
              class="c0"
              role="main"
            >
              <h1
                class="c1"
                id="content"
                tabindex="-1"
              >
                Ўзбек деҳқонининг косаси нега оқармайдиshort
              </h1>
              <div
                class="c2"
              >
                <figure
                  class="c3"
                >
                  <div
                    class="c4"
                  >
                    <iframe
                      allow="autoplay; fullscreen"
                      allowfullscreen=""
                      class="c5"
                      scrolling="no"
                      src="https://test.bbc.com/ws/av-embeds/cps/uzbek/sport-23248721/bbc_world_service_west_africa/uz-Cyrl"
                      title="Медиа плейер"
                    />
                    <div
                      class="c6"
                    >
                      <div
                        class="c7"
                      />
                    </div>
                    <noscript />
                  </div>
                </figure>
              </div>
              <div
                class="c8"
              >
                <strong
                  aria-hidden="true"
                  class="c9 c10"
                >
                  Ўзбек деҳқонининг косаси нега оқармайдиshort
                </strong>
              </div>
              <div
                class="c11 c12"
              >
                <time
                  class="c13"
                  datetime="2019-09-13"
                >
                  13 сентябр 2019
                </time>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  <b>
                    Ўзбек деҳқонининг косаси нега оқармайди
                  </b>
                </p>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  <b>
                    Ўзбек деҳқонининг косаси нега оқармайди
                  </b>
                  <b>
                     heading
                  </b>
                </p>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  <i
                    class="c15"
                  >
                    <b>
                      Ўзбек деҳқонининг косаси нега оқармайди
                    </b>
                  </i>
                  <i
                    class="c15"
                  >
                    <b>
                       heading
                    </b>
                  </i>
                </p>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  <b>
                    Ўзбек деҳқонининг косаси нега оқармайди
                  </b>
                  <b>
                     crosshead 
                  </b>
                </p>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  Шу йил апрел ойида Ўзбекистон Президенти Ислом 
                  <a
                    class="c16"
                    href="https://bbc.com/uzbek"
                  >
                    Каримов ўзининг
                  </a>
                   Москвага сафари мобайнида Россияга Туркия каби мамлакатлардан келмай қолган қишлоқ хўжалик маҳсулотлари ўрнини Ўзбекистон қоплаб беришга тайёр эканлигини айтганди.
                </p>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  Шу вақтгача ҳам ўзбекистонлик деҳқонлар ўз маҳсулотларини хорижга олиб 
                  <b>
                    чиқишда турли муаммоларга юз тутиб
                  </b>
                   келишган, апрель ойида президент қарори билан "Ўзагроэкспорт" мева-сабзавот маҳсулотларини экспорт қилиш билан шуғулланадиган ташқи савдо компанияси ҳам ташкил қилинди.
                </p>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  Ўз мева-сабзавотини Россияга олиб чиқишда бу компания ёрдамига умид қилган боғбонларнинг гилослари бузила бошлагани ҳақидаги хабарлар ҳам тарқалди..
                </p>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  Ҳозирда Ўзбекистонда айни пишиқчилик ва етиштирилган маҳсулот учун кенгроқ бозор топиш масаласи яна долзарб турар экан, мамлакат раҳбарининг сўзларидан сўнг вазият нақадар ўзгарган?
                </p>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  Би-би-си билан суҳбатда иқтисодий таҳлилчи Анвар Ҳусаиновнинг айтишича, юқори минбардан айтилган сўзларга қарамай, қишлоқ хўжалиги маҳсулотларини хорижга, жумладан Россия бозорига олиб чиқишда ҳануз кўплаб муаммолар мавжуд.
                </p>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  "Албатта ўтган йилларга қараганда маҳсулотлар экспорти анча кўпайган. Россиядан юк машиналари келиб, тўғридан-тўғри деҳқонлардан нақд пулга 
                </p>
              </div>
              <div
                class="c11"
              >
                <div
                  class="c17"
                >
                  <ul
                    class="c18"
                    dir="ltr"
                    role="list"
                  >
                    <li
                      class="c19"
                      role="listitem"
                    >
                      Ўзбек деҳқонининг косаси нега оқармайди
                    </li>
                    <li
                      class="c19"
                      role="listitem"
                    >
                      Ўзбек деҳқонининг косаси нега оқармайди
                    </li>
                    <li
                      class="c19"
                      role="listitem"
                    >
                      <b>
                        Ўзбек деҳқонининг косаси нега оқармайди
                      </b>
                    </li>
                    <li
                      class="c19"
                      role="listitem"
                    >
                      Ўзбек деҳқонининг косаси нега оқармайди
                    </li>
                  </ul>
                </div>
              </div>
              <div
                class="c11"
              >
                <div
                  class="c17"
                >
                  <ul
                    class="c18"
                    dir="ltr"
                    role="list"
                  >
                    <li
                      class="c19"
                      role="listitem"
                    >
                      <a
                        class="c16"
                        href="https://bbc.com/uzbek"
                      >
                        Ўзбек деҳқонининг косаси нега оқармайди
                      </a>
                    </li>
                    <li
                      class="c19"
                      role="listitem"
                    >
                      <a
                        class="c16"
                        href="https://bbc.com/uzbek"
                      >
                        Ўзбек деҳқонининг косаси нега оқармайди
                      </a>
                    </li>
                    <li
                      class="c19"
                      role="listitem"
                    >
                      <a
                        class="c16"
                        href="https://bbc.com/uzbek"
                      >
                        Ўзбек деҳқонининг косаси нега оқармайди
                      </a>
                    </li>
                    <li
                      class="c19"
                      role="listitem"
                    >
                      <a
                        class="c16"
                        href="https://bbc.com/uzbek"
                      >
                        Ўзбек деҳқонининг косаси нега оқармайди
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
              <div
                class="c20"
              >
                <figure
                  class="c3"
                >
                  <div
                    class="c21"
                  >
                    <div
                      class="c22"
                    >
                      <div
                        class="c23"
                      >
                        <div
                          class="lazyload-wrapper"
                        >
                          <div
                            class="lazyload-placeholder"
                          />
                        </div>
                        <noscript />
                        <p
                          class="c24"
                          role="text"
                        >
                          <span
                            class="c1"
                          >
                            Сурат манбаси, 
                          </span>
                          <span
                            lang="en-GB"
                          >
                            AFP
                          </span>
                        </p>
                      </div>
                    </div>
                    <div
                      class="c25"
                    />
                  </div>
                </figure>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  Ўзбек деҳқонининг косаси нега оқармайди transmission info 
                </p>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  Ўзбек деҳқонининг косаси нега оқармайди footer 
                </p>
              </div>
            </main>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Media Asset Page should render component 1`] = `
<DocumentFragment>
  .c53 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.8125rem;
  height: 0.75rem;
}

.c52 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 1rem;
  height: 0.8125rem;
}

.c1 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c7 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #ECEAE7;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 30%;
  padding-bottom: 56.25%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

.c4 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

.c28 {
  margin: 0 auto;
  padding-bottom: 2rem;
}

.c11 {
  grid-column: 1 / span 6;
}

.c22 {
  display: grid;
  grid-column-gap: 1rem;
}

.c9 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

.c15 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding: 1.5rem 0;
}

.c20 {
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  font-family: inherit;
  font-weight: inherit;
}

.c13 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  padding-bottom: 0.25rem;
}

.c13:last-child {
  padding-bottom: 1rem;
}

.c49 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

.c14 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c19 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c19:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.c19:focus,
.c19:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

.c17 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  margin-top: 0;
  list-style-type: none;
}

.c17 > li {
  position: relative;
}

.c17 > li::before {
  top: 0.5rem;
  content: ' ';
  position: absolute;
  border-width: 1rem;
  border: 0.1875rem solid #3F3F42;
  border-radius: 50%;
  left: -1rem;
}

.c18 {
  margin-bottom: 1rem;
}

.c16 {
  margin-bottom: 1.5rem;
}

.c3 {
  margin: 0;
  padding-bottom: 1.5rem;
  width: 100%;
}

.c25 {
  font-size: 0.75rem;
  line-height: 1rem;
  background-color: rgba(34,34,34,0.75);
  text-transform: uppercase;
  color: #FFFFFF;
  padding: 0.25rem 0.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  position: absolute;
  bottom: 0;
  margin: 0;
  left: 0;
}

.c27 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  color: #6E6E73;
  padding: 0.5rem 0.5rem 0;
  width: 100%;
}

.c27 > p {
  padding-bottom: 1.5rem;
  margin: 0;
}

.c27 > p:last-child {
  padding-bottom: 0;
}

.c27 i {
  font-style: normal;
}

.c24 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #ECEAE7;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 30%;
  padding-bottom: 56.25%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

.c2 {
  margin-top: 0.5rem;
}

.c2 figure {
  padding-bottom: 0;
}

.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c36 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c32 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

.c30 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

.c33 {
  margin: 0;
  padding: 0;
}

.c29 {
  margin-bottom: 1rem;
}

.c31 {
  margin-top: 0;
}

.c43 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

.c46 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

.c41 {
  position: relative;
}

.c44 {
  position: relative;
}

.c45 > * {
  height: 2rem;
  padding: 0.5rem 0.25rem;
}

.c50 {
  color: #222222;
  background-color: #FFFFFF;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  display: block;
}

.c51 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c54 {
  padding: 0 0.25rem;
}

.c39 {
  padding: 0.5rem 0 1rem;
}

.c39:last-child {
  border: none;
}

.c39:first-child {
  padding-top: 0;
}

.c39:last-child {
  padding-bottom: 0;
}

.c37 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c10 {
  padding: 0.5rem 0 2rem;
}

.c0 {
  margin: 0 auto;
  padding-bottom: 2rem;
  width: 100%;
  padding-bottom: 1.5rem;
}

.c12 {
  padding-bottom: 1rem;
}

.c6 {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
}

.c5 {
  z-index: 1;
  border: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c47 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

.c48 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  overflow-wrap: anywhere;
}

.c48:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c48:hover,
.c48:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c48:visited {
  color: #6E6E73;
}

@media (min-width:63rem) {
  .c4 {
    margin-bottom: 1.5rem;
  }
}

@media (max-width:37.4375rem) {
  .c28 {
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:37.5rem) {
  .c28 {
    grid-column-gap: 1rem;
  }
}

@media (max-width:62.9375rem) {
  .c28 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c28 {
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
    max-width: 45.5rem;
  }
}

@media (min-width:80rem) {
  .c28 {
    grid-template-columns: 1fr repeat(20,minmax(0,2.95rem)) 1fr;
    max-width: 46.4rem;
  }
}

@supports (display:grid) {
  .c28 {
    display: grid;
    max-width: initial;
    margin: initial;
  }
}

@media (max-width:25rem) {
  .c11 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c11 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c11 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c11 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c11 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c11 {
    max-width: initial;
  }
}

@media (max-width:63rem) {
  .c8 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c8 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .c8 {
    grid-column: 6 / span 12;
  }
}

@media (max-width:25rem) {
  .c8 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c8 {
    padding: 0 1rem;
  }
}

@media (max-width:63rem) {
  .c21 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c21 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .c21 {
    grid-column: 6 / span 12;
  }
}

@media (max-width:37.4375rem) {
  .c23 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c23 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c23 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:80rem) {
  .c23 {
    grid-column: 1 / span 12;
  }
}

@media (max-width:37.4375rem) {
  .c26 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c26 {
    grid-column: 1 / span 5;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c26 {
    grid-column: 1 / span 5;
  }
}

@media (min-width:80rem) {
  .c26 {
    grid-column: 1 / span 10;
  }
}

@media (max-width:79.9375rem) {
  .c22 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:80rem) {
  .c22 {
    grid-template-columns: repeat(12,1fr);
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c9 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c9 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c9 {
    padding: 2.5rem 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c15 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c15 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c15 {
    padding-top: 2rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c13 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c13 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c49 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c49 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c14 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c14 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c17 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c17 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c27 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c27 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c27 {
    padding: 0.5rem 1rem 0;
  }
}

@media (min-width:63rem) {
  .c27 {
    padding: 0.5rem 0 0;
  }
}

@media (max-width:63rem) {
  .c2 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .c2 {
    grid-column: 6 / span 12;
  }
}

@media (min-width:25rem) {
  .c2 {
    margin-top: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .c2 {
    padding: 0.5rem 0 0;
    margin-top: 2rem;
  }
}

@media (min-width:37.5rem) {
  .c35 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c36 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c36 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c36 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .c36 {
    padding-right: 1rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c32 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .c32 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c30 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .c30 {
    margin-bottom: 1.5rem;
  }
}

@supports (display:grid) {
  .c38 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c40 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c40 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c40 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c40 {
    width: calc(6/6*(100% - 6 * 1rem) + 5 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c40 {
    width: calc(8/8*(100% - 8 * 1rem) + 7 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c40 {
    width: calc(8/8*(100% - 8 * 1rem) + 7 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c40 {
    display: block;
  }
}

@media (max-width:63rem) {
  .c29 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c29 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .c29 {
    grid-column: 6 / span 12;
  }
}

@media (max-width:25rem) {
  .c29 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c29 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c29 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width:63rem) {
  .c43 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c43 {
    width: initial;
    grid-column: 1 / span 2;
  }
}

@media (min-width:37.5rem) {
  .c46 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .c46 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c46 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c41 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:25rem) {
  .c45 {
    position: absolute;
    bottom: 0;
  }
}

@media (max-width:24.9375rem) {
  .c45 > * {
    height: 1.25rem;
    padding: 0.25rem 0.25rem 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c50 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c50 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:63rem) {
  .c42 {
    display: grid;
  }
}

@media (max-width:62.9375rem) {
  .c39 {
    border-bottom: 0.0625rem solid #F2F2F2;
  }
}

@media (min-width:37.5rem) {
  .c39 {
    padding: 1rem 0 1rem;
  }
}

@media (min-width:63rem) {
  .c39 {
    padding: 0 0 1.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c39:first-child {
    padding-top: 1rem;
  }
}

@media (min-width:63rem) {
  .c10 {
    padding: 1rem 0 2.5rem;
  }
}

@media (max-width:37.4375rem) {
  .c0 {
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    grid-column-gap: 1rem;
  }
}

@media (max-width:62.9375rem) {
  .c0 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c0 {
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
    max-width: 45.5rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(20,minmax(0,2.95rem)) 1fr;
    max-width: 46.4rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    max-width: initial;
    margin: initial;
  }
}

@media (min-width:63rem) {
  .c0 {
    padding-bottom: 2rem;
  }
}

@media (min-width:63rem) {
  .c12 {
    padding-bottom: 1.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c47 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c47 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

<div
    id="ContextsContainer"
  >
    <div
      id="PageWrapperContainer"
    >
      <div
        id="LoadingContainer"
      >
        <div
          id="ErrorContainer"
        >
          <div
            id="DataContainer"
          >
            <div>
              chartbeat
            </div>
            <div>
              comscore
            </div>
            <noscript />
            <main
              class="c0"
              role="main"
            >
              <h1
                class="c1"
                id="content"
                tabindex="-1"
              >
                Simorgh: Media Pod Build First CPS Media Asset Page in Simorgh & &lt; &gt;
              </h1>
              <div
                class="c2"
              >
                <figure
                  class="c3"
                >
                  <div
                    class="c4"
                  >
                    <iframe
                      allow="autoplay; fullscreen"
                      allowfullscreen=""
                      class="c5"
                      scrolling="no"
                      src="https://test.bbc.com/ws/av-embeds/cps/pidgin/23248703/p01kx42v/pcm"
                      title="Media player"
                    />
                    <div
                      class="c6"
                    >
                      <div
                        class="c7"
                      />
                    </div>
                    <noscript />
                  </div>
                </figure>
              </div>
              <div
                class="c8"
              >
                <strong
                  aria-hidden="true"
                  class="c9 c10"
                >
                  Simorgh: Media Pod Build First CPS Media Asset Page in Simorgh & &lt; &gt;
                </strong>
              </div>
              <div
                class="c11 c12"
              >
                <time
                  class="c13"
                  datetime="2019-09-13"
                >
                  13 September 2019
                </time>
                <div>
                  <time
                    class="c13"
                    datetime="2019-11-20"
                  >
                    New Informate 20 November 2019
                  </time>
                </div>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  <b>
                    This is an introduction in bold. & &lt; &gt;
                  </b>
                </p>
              </div>
              <div
                class="c11"
              >
                <h2
                  class="c15"
                  id="This-is-a-heading-<->"
                  tabindex="-1"
                >
                  This is a heading & &lt; &gt;
                </h2>
              </div>
              <div
                class="c11"
              >
                <h2
                  class="c15"
                  id="This-is-a-subheading-<->"
                  tabindex="-1"
                >
                  This is a subheading & &lt; &gt;
                </h2>
              </div>
              <div
                class="c11"
              >
                <h2
                  class="c15"
                  id="This-is-a-crosshead-<->"
                  tabindex="-1"
                >
                  This is a crosshead & &lt; &gt;
                </h2>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  This is regular paragraph text. "Lorem ipsum dolor sit amet", consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                </p>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  Bulleted list:
                </p>
              </div>
              <div
                class="c11"
              >
                <div
                  class="c16"
                >
                  <ul
                    class="c17"
                    dir="ltr"
                    role="list"
                  >
                    <li
                      class="c18"
                      role="listitem"
                    >
                      <a
                        class="c19"
                        href="http://www.bbc.com/afrique/23248423"
                      >
                        &lt;Media Asset Page&gt;
                      </a>
                    </li>
                    <li
                      class="c18"
                      role="listitem"
                    >
                      <a
                        class="c19"
                        href="http://www.bbc.com/afrique/23248423"
                      >
                        &lt;Media Asset Page&gt;
                      </a>
                    </li>
                    <li
                      class="c18"
                      role="listitem"
                    >
                      <a
                        class="c19"
                        href="http://www.bbc.com/afrique/23248423"
                      >
                        &lt;Media Asset Page&gt;
                      </a>
                    </li>
                    <li
                      class="c18"
                      role="listitem"
                    >
                      <a
                        class="c19"
                        href="https://bbc.com/pidgin"
                      >
                        this is the link text
                      </a>
                    </li>
                    <li
                      class="c18"
                      role="listitem"
                    >
                      <a
                        class="c19"
                        href="https://bbc.com/pidgin"
                      >
                        this is the link text
                      </a>
                    </li>
                    <li
                      class="c18"
                      role="listitem"
                    >
                      <a
                        class="c19"
                        href="https://bbc.com/pidgin"
                      >
                        this is the link text
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  Numbered list:
                </p>
              </div>
              <div
                class="c11"
              >
                <div
                  class="c16"
                >
                  <ul
                    class="c17"
                    dir="ltr"
                    role="list"
                  >
                    <li
                      class="c18"
                      role="listitem"
                    >
                      <a
                        class="c19"
                        href="http://www.bbc.com/afrique/23248423"
                      >
                        &lt;Media Asset Page&gt;
                      </a>
                    </li>
                    <li
                      class="c18"
                      role="listitem"
                    >
                      <a
                        class="c19"
                        href="http://www.bbc.com/afrique/23248423"
                      >
                        &lt;Media Asset Page&gt;
                      </a>
                    </li>
                    <li
                      class="c18"
                      role="listitem"
                    >
                      <a
                        class="c19"
                        href="http://www.bbc.com/afrique/23248423"
                      >
                        &lt;Media Asset Page&gt;
                      </a>
                    </li>
                    <li
                      class="c18"
                      role="listitem"
                    >
                      <a
                        class="c19"
                        href="https://bbc.com/pidgin"
                      >
                        this is the link text
                      </a>
                    </li>
                    <li
                      class="c18"
                      role="listitem"
                    >
                      <a
                        class="c19"
                        href="https://bbc.com/pidgin"
                      >
                        this is the link text
                      </a>
                    </li>
                    <li
                      class="c18"
                      role="listitem"
                    >
                      <a
                        class="c19"
                        href="https://bbc.com/pidgin"
                      >
                        this is the link text
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  Lorem ipsum dolor sit amet, 
                  <b>
                    consectetur
                  </b>
                   adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                  <b>
                     ullamco laboris nisi ut aliquip 
                  </b>
                  ex ea commodo consequat. Duis aute irure dolor in reprehenderit
                  <i
                    class="c20"
                  >
                     in voluptate velit esse cillum 
                  </i>
                  dolore "eu fugiat nulla" pariatur. 
                  <a
                    class="c19"
                    href="https://bbc.com/pidgin"
                  >
                    Excepteur
                  </a>
                   sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                </p>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  Testing special characters: !"£$%^&*()_+=-{}[]:@~;'#&lt;&gt;?,./\\\`\\# 7.7 E 2₉₈₇₆₅₄₃₂₁₀⁹⁸⁷⁶⁵⁴³²¹⁰ⁿ☆★ŷŶŵŴÿþýüûúùø÷öõôóòñðïîíìëêéèçæåäãâáßÞÝÜÛÚÙØ×ÖÕÔÓÒÑÐÏÎÍÌËÊÉÈ
                </p>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  ÇÆÆÅÄÃÂÁÀ¿¾½¼»º¸·¶µ´±°¯®¬«ª©¨§¦¥¤£¢¡ ~#
                </p>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  Table:
                </p>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  Social media embed:
                </p>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  Quote box:
                </p>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  Correspondent quote box:
                </p>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  Fact box:
                </p>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  ­
                </p>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  Lorem ipsum
                  <a
                    class="c19"
                    href="https://bbc.com/pidgin"
                  >
                     dolor sit amet
                  </a>
                  , consectetur adipiscing elit
                </p>
              </div>
              <div
                class="c21"
              >
                <figure
                  class="c3"
                >
                  <div
                    class="c22"
                  >
                    <div
                      class="c23"
                    >
                      <div
                        class="c24"
                      >
                        <div
                          class="lazyload-wrapper"
                        >
                          <div
                            class="lazyload-placeholder"
                          />
                        </div>
                        <noscript />
                        <p
                          class="c25"
                          role="text"
                        >
                          <span
                            class="c1"
                          >
                            Wia dis foto come from, 
                          </span>
                          <span
                            lang="en-GB"
                          >
                            Google
                          </span>
                        </p>
                      </div>
                    </div>
                    <div
                      class="c26"
                    >
                      <figcaption
                        class="c27"
                      >
                        <span
                          class="c1"
                        >
                          Wetin we call dis foto, 
                        </span>
                        <p>
                          Psammead was named after the mythical sand creature
                        </p>
                      </figcaption>
                    </div>
                  </div>
                </figure>
              </div>
              <div
                class="c21"
              >
                <figure
                  class="c3"
                >
                  <div
                    class="c22"
                  >
                    <div
                      class="c23"
                    >
                      <div
                        class="c24"
                      >
                        <div
                          class="lazyload-wrapper"
                        >
                          <div
                            class="lazyload-placeholder"
                          />
                        </div>
                        <noscript />
                        <p
                          class="c25"
                          role="text"
                        >
                          <span
                            class="c1"
                          >
                            Wia dis foto come from, 
                          </span>
                          <span
                            lang="en-GB"
                          >
                            Butterfly person
                          </span>
                        </p>
                      </div>
                    </div>
                    <div
                      class="c26"
                    >
                      <figcaption
                        class="c27"
                      >
                        <span
                          class="c1"
                        >
                          Wetin we call dis foto, 
                        </span>
                        <p>
                          A pretty little butterfly & &lt; &gt;
                        </p>
                      </figcaption>
                    </div>
                  </div>
                </figure>
              </div>
              <div
                class="c11"
              >
                <div
                  class="c16"
                >
                  <ul
                    class="c17"
                    dir="ltr"
                    role="list"
                  >
                    <li
                      class="c18"
                      role="listitem"
                    >
                      sunt in culpa qui officia deserunt mollit anim id est laborum
                    </li>
                    <li
                      class="c18"
                      role="listitem"
                    >
                      sunt in culpa qui officia deserunt mollit anim id est laborum
                    </li>
                    <li
                      class="c18"
                      role="listitem"
                    >
                      sunt in culpa qui officia deserunt mollit anim id est laborum
                    </li>
                    <li
                      class="c18"
                      role="listitem"
                    >
                      v3 draft
                    </li>
                  </ul>
                </div>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  This is transmission info 
                </p>
              </div>
              <div
                class="c11"
              >
                <p
                  class="c14"
                >
                  This is the footer 
                </p>
              </div>
            </main>
            <section
              aria-labelledby="related-content-heading"
              class="c28"
              data-e2e="related-content-heading"
              role="region"
            >
              <div
                class="c29"
              >
                <div
                  class="c30 c31"
                >
                  <div
                    class="c32"
                  />
                  <h2
                    class="c33"
                  >
                    <span
                      class="c34"
                    >
                      <span
                        class="c35"
                      >
                        <span
                          class="c36"
                          dir="ltr"
                          id="related-content-heading"
                        >
                          Another thing we de for inside dis tori
                        </span>
                      </span>
                    </span>
                  </h2>
                </div>
                <ul
                  class="c37 c38"
                  dir="ltr"
                  role="list"
                >
                  <li
                    class="c39 c40"
                    dir="ltr"
                    role="listitem"
                  >
                    <div
                      class="c41 c42"
                    >
                      <div
                        class="c43"
                        dir="ltr"
                      >
                        <div
                          class="c44"
                        >
                          <div
                            class="c24"
                          >
                            <div
                              class="lazyload-wrapper"
                            >
                              <div
                                class="lazyload-placeholder"
                              />
                            </div>
                          </div>
                          <div
                            class="c45"
                          />
                        </div>
                      </div>
                      <div
                        class="c46"
                        dir="ltr"
                      >
                        <h3
                          class="c47"
                        >
                          <a
                            class="c48"
                            href="/pidgin/tori-23145776"
                          >
                            Police Arrest 3 ontop Anambra Church Attack
                          </a>
                        </h3>
                        <time
                          class="c49"
                          datetime="2017-08-08"
                        >
                          8th August 2017
                        </time>
                      </div>
                    </div>
                  </li>
                  <li
                    class="c39 c40"
                    dir="ltr"
                    role="listitem"
                  >
                    <div
                      class="c41 c42"
                    >
                      <div
                        class="c43"
                        dir="ltr"
                      >
                        <div
                          class="c44"
                        >
                          <div
                            class="c24"
                          >
                            <div
                              class="lazyload-wrapper"
                            >
                              <div
                                class="lazyload-placeholder"
                              />
                            </div>
                          </div>
                          <div
                            class="c45"
                          />
                        </div>
                      </div>
                      <div
                        class="c46"
                        dir="ltr"
                      >
                        <h3
                          class="c47"
                        >
                          <a
                            class="c48"
                            href="/pidgin/tori-23143754"
                          >
                            Lagos 'Gay' men Appear for Court, say Dem no dey Guilty
                          </a>
                        </h3>
                        <time
                          class="c49"
                          datetime="2017-08-08"
                        >
                          8th August 2017
                        </time>
                      </div>
                    </div>
                  </li>
                  <li
                    class="c39 c40"
                    dir="ltr"
                    role="listitem"
                  >
                    <div
                      class="c41 c42"
                    >
                      <div
                        class="c43"
                        dir="ltr"
                      >
                        <div
                          class="c44"
                        >
                          <div
                            class="c7"
                          />
                          <div
                            class="c45"
                          >
                            <div
                              aria-hidden="true"
                              class="c50"
                              dir="ltr"
                            >
                              <div
                                class="c51"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="c52"
                                  focusable="false"
                                  height="13px"
                                  viewBox="0 0 32 26"
                                  width="16px"
                                >
                                  <path
                                    d="M9,2V0H4V2H0V26H32V2ZM6.5,10A2.5,2.5,0,1,1,9,7.52,2.5,2.5,0,0,1,6.5,10ZM20,23a9,9,0,1,1,9-9A9,9,0,0,1,20,23Z"
                                  />
                                  <circle
                                    cx="20"
                                    cy="14.02"
                                    r="5.5"
                                  />
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="c46"
                        dir="ltr"
                      >
                        <h3
                          class="c47"
                        >
                          <a
                            class="c48"
                            href="/pidgin/23146654"
                          >
                            <span
                              role="text"
                            >
                              <span
                                class="c1"
                              >
                                Image gallery, 
                              </span>
                              <span>
                                Kenya Elections Pictures: 8 August 2017
                              </span>
                            </span>
                          </a>
                        </h3>
                        <time
                          class="c49"
                          datetime="2017-08-08"
                        >
                          8th August 2017
                        </time>
                      </div>
                    </div>
                  </li>
                  <li
                    class="c39 c40"
                    dir="ltr"
                    role="listitem"
                  >
                    <div
                      class="c41 c42"
                    >
                      <div
                        class="c43"
                        dir="ltr"
                      >
                        <div
                          class="c44"
                        >
                          <div
                            class="c24"
                          >
                            <div
                              class="lazyload-wrapper"
                            >
                              <div
                                class="lazyload-placeholder"
                              />
                            </div>
                          </div>
                          <div
                            class="c45"
                          >
                            <div
                              aria-hidden="true"
                              class="c50"
                              dir="ltr"
                            >
                              <div
                                class="c51"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="c53"
                                  focusable="false"
                                  height="12px"
                                  viewBox="0 0 13 12"
                                  width="13px"
                                >
                                  <path
                                    d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
                                  />
                                  <path
                                    d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
                                  />
                                </svg>
                                <time
                                  class="c54"
                                  datetime="PT15S"
                                >
                                  0:15
                                </time>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="c46"
                        dir="ltr"
                      >
                        <h3
                          class="c47"
                        >
                          <a
                            class="c48"
                            href="/pidgin/media-23147054"
                          >
                            <span
                              role="text"
                            >
                              <span
                                class="c1"
                              >
                                Audio, 
                              </span>
                              <span>
                                BBC News Pidgin One Minute News
                              </span>
                              <span
                                class="c1"
                              >
                                , 0,15
                              </span>
                            </span>
                          </a>
                        </h3>
                        <time
                          class="c49"
                          datetime="2017-08-17"
                        >
                          17th August 2017
                        </time>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </section>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
